// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with children 1`] = `
.glamor-3,
[data-glamor-3] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0, 3, 6, 0.87);
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-0,
[data-glamor-0] {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
  width: 16px;
  height: 16px;
  color: transparent;
  stroke-width: 2;
  box-sizing: content-box;
  line-height: 0;
  flex-shrink: 0;
  transition: all 150ms ease-in-out;
  background-color: #FFFFFF;
  border: 1px solid rgba(0, 3, 6, 0.26);
  border-radius: 4px;
  -webkit-flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.glamor-2,
[data-glamor-2] {
  margin-left: 16px;
  line-height: 1.25;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

<label
  className="glamor-3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="glamor-0"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="glamor-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
  />
  <span
    className="glamor-2"
  >
    Normal Text
    <strong>
      Strong
    </strong>
  </span>
</label>
`;

exports[`renders with custom margin 1`] = `
.glamor-3,
[data-glamor-3] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0, 3, 6, 0.87);
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-0,
[data-glamor-0] {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
  width: 16px;
  height: 16px;
  color: transparent;
  stroke-width: 2;
  box-sizing: content-box;
  line-height: 0;
  flex-shrink: 0;
  transition: all 150ms ease-in-out;
  background-color: #FFFFFF;
  border: 1px solid rgba(0, 3, 6, 0.26);
  border-radius: 4px;
  -webkit-flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.glamor-2,
[data-glamor-2] {
  margin-left: 100px;
  line-height: 1.25;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

<label
  className="glamor-3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="glamor-0"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="glamor-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
  />
  <span
    className="glamor-2"
  >
    Test Label
  </span>
</label>
`;

exports[`renders with label 1`] = `
.glamor-3,
[data-glamor-3] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0, 3, 6, 0.87);
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-0,
[data-glamor-0] {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
  width: 16px;
  height: 16px;
  color: transparent;
  stroke-width: 2;
  box-sizing: content-box;
  line-height: 0;
  flex-shrink: 0;
  transition: all 150ms ease-in-out;
  background-color: #FFFFFF;
  border: 1px solid rgba(0, 3, 6, 0.26);
  border-radius: 4px;
  -webkit-flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.glamor-2,
[data-glamor-2] {
  margin-left: 16px;
  line-height: 1.25;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

<label
  className="glamor-3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="glamor-0"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="glamor-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
  />
  <span
    className="glamor-2"
  >
    Test Label
  </span>
</label>
`;

exports[`renders without crashing 1`] = `
.glamor-3,
[data-glamor-3] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0, 3, 6, 0.87);
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-0,
[data-glamor-0] {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
  width: 16px;
  height: 16px;
  color: transparent;
  stroke-width: 2;
  box-sizing: content-box;
  line-height: 0;
  flex-shrink: 0;
  transition: all 150ms ease-in-out;
  background-color: #FFFFFF;
  border: 1px solid rgba(0, 3, 6, 0.26);
  border-radius: 4px;
  -webkit-flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.glamor-2,
[data-glamor-2] {
  margin-left: 16px;
  line-height: 1.25;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

<label
  className="glamor-3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="glamor-0"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="glamor-1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
  />
  <span
    className="glamor-2"
  >
    
  </span>
</label>
`;
